# PaStiX

./: .clang-complete  .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  ChangeLog.md  README.md  pastix.pc.in  pastix_env.sh.in  pastixf.pc.in
bcsc/: bcsc.c  bcsc.h  bcsc_z.h  bcsc_zinit.c  bcsc_znorm.c  bcsc_zspmv.c  bvec.c  bvec.h  bvec_zcompute.c
blend/: blend.h  blendctrl.c  blendctrl.h  cand.c  cand.h  cand_gendot.c  cost.c  cost.h  elimintree.c  elimintree.h  extendVector.c  extendVector.h  extracblk.c  extracblk.h  pastix_subtask_blend.c  pastix_task_analyze.c  perf.h  propmap.c  simu.c  simu.h  simu_run.c  simu_task.c  simu_timer.h  solver.c  solver.h  solver_backup.c  solver_check.c  solver_copy.c  solver_draw.c  solver_io.c  solver_matrix_gen.c  solver_matrix_gen_utils.c  solver_matrix_gen_utils.h  splitsymbol.c
cmake_modules/: CheckSystem.cmake  PrintOpts.cmake  local_subs.py
cmake_modules/morse_cmake/: .gitlab-ci.yml
common/: api.c  common.h  common_sort.c  common_sort2.c  flops.h  frobeniusupdate.h  get_options.c  getline.c  integer.c  integer.h  isched.c  isched.h  isched_barrier.h  isched_hwloc.c  isched_hwloc.h  isched_nohwloc.c  memory.h  models.c  models.h  nompi.h  out.h  pastixdata.h  timing.h  z_integer.c
common/sys/: atomic.h
docs/: CMakeLists.txt
docs/doxygen/: groups.dox
example/: CMakeLists.txt  CTestLists.txt  Makefile.in  analyze.c  bench_facto.c  compress.c  dump_rank.c  multidof.c  ordering_grid.c  personal.c  reentrant.c  refinement.c  regular_first_sep.c  schur.c  simple.c  simple_vdof.c  step-by-step.c
example/old/: CMakeLists.txt  Makefile.in  simple.c  step-by-step.c
graph/: graph.c  graph.h  graph_compute_kway.c  graph_compute_projection.c  graph_connected_components.c  graph_io.c  graph_isolate.c  graph_prepare.c  graph_symmetrize.c
include/: pastix.h
include/pastix/: api.h  config.h.in  datatypes.h  old_api.h  order.h
kernels/: CMakeLists.txt  core_zgeadd.c  core_zgelrops.c  core_zgelrops_svd.c  core_zgemdm.c  core_zgemmsp.c  core_zgetmo.c  core_zgetrfsp.c  core_zhetrfsp.c  core_zlr2xx.c  core_zlrdbg.c  core_zlrmm.c  core_zlrnrm.c  core_zlrothu.c  core_zplrnt.c  core_zpotrfsp.c  core_zpqrcp.c  core_zpxtrfsp.c  core_zrqrcp.c  core_zrqrrt.c  core_zscalo.c  core_zsytrfsp.c  core_ztqrcp.c  core_ztradd.c  core_ztrsmsp.c  core_zxx2fr.c  core_zxx2lr.c  cpucblk_zadd.c  cpucblk_zcompress.c  cpucblk_zdiff.c  cpucblk_zinit.c  cpucblk_zmpi_coeftab.c  cpucblk_zmpi_rhs.c  cpucblk_zschur.c  gpu_zgemmsp.c  kernels.c  kernels.h  kernels_trace.c  kernels_trace.h  lowrank.c  (+9 more)
kernels/eztrace_module/: eztrace_convert_kernels.c  kernels_ev_codes.h
kernels/gpus/: CMakeLists.txt
kernels/gpus/fermi/: sparse_zgemm_fermi.cu
kernels/gpus/kepler/: pastix_zgemm_vbatched.cu  zgemm_vbatched.cu
order/: order.c  order_add_isolate.c  order_amalgamate.c  order_apply_level_order.c  order_check.c  order_compute_metis.c  order_compute_ptscotch.c  order_compute_scotch.c  order_draw.c  order_find_supernodes.c  order_grids.c  order_io.c  order_scotch_strats.h  order_supernodes.c  pastix_subtask_order.c
refinement/: CMakeLists.txt  pastix_task_refine.c  z_refine_bicgstab.c  z_refine_functions.c  z_refine_functions.h  z_refine_gmres.c  z_refine_grad.c  z_refine_pivot.c
sopalin/: coeftab.c  coeftab.h  coeftab_z.c  coeftab_z.h  coeftab_zinit.c  diag.c  pastix.c  pastix_task_solve.c  pastix_task_sopalin.c  schur.c  sequential_zdiag.c  sequential_zgetrf.c  sequential_zhetrf.c  sequential_zpotrf.c  sequential_zpxtrf.c  sequential_zsytrf.c  sequential_ztrsm.c  sopalin_data.h
sopalin/parsec/: CMakeLists.txt  parsec.c  parsec_sparse_matrix.c  parsec_zgetrf.c  parsec_zhetrf.c  parsec_zpotrf.c  parsec_zpxtrf.c  parsec_zsytrf.c  pastix_parsec.h  pastix_zparsec.h  zgetrf_sp1dplus.jdf  zgetrf_sp2d.jdf  zhetrf_sp1dplus.jdf  zhetrf_sp2d.jdf  zpotrf_sp1dplus.jdf  zpotrf_sp2d.jdf  zpxtrf_sp1dplus.jdf  zpxtrf_sp2d.jdf  zsytrf_sp1dplus.jdf  zsytrf_sp2d.jdf
sopalin/starpu/: CMakeLists.txt  codelet_solve_zdiag.c  codelet_solve_zgemm.c  codelet_solve_ztrsm.c  codelet_zgemmsp.c  codelet_zgetrfsp.c  codelet_zhetrfsp.c  codelet_zpotrfsp.c  codelet_zpxtrfsp.c  codelet_zscalo.c  codelet_zsytrfsp.c  codelet_ztrsmsp.c  codelets.h  pastix_starpu.h  pastix_starpu_model.c  pastix_starpu_model.h  pastix_zstarpu.h  starpu.c  starpu_dense_matrix.c  starpu_sparse_matrix.c  starpu_zdiag.c  starpu_zgetrf.c  starpu_zhetrf.c  starpu_zpotrf.c  starpu_zpxtrf.c  starpu_zsytrf.c  starpu_ztrsm.c
spm/: CMakeLists.txt  README.md
spm/cmake_modules/: local_subs.py
spm/include/: spm.h  spm_config.h.in
spm/src/: common.h  spm.c  z_spm.c  z_spm_dof_extend.c  z_spm_matrixvector.c  (+1 more)
symbol/: fax_csr.c  fax_csr.h  fax_csr_amalgamate.c  fax_csr_direct.c  fax_csr_iluk.c  pastix_subtask_reordering.c  pastix_subtask_symbfact.c  symbol.c  symbol.h  symbol_base.c  symbol_check.c  symbol_cost.c  symbol_cost.h  symbol_cost_flops.c  symbol_cost_perfs.c  symbol_draw.c  symbol_expand.c  symbol_fax.c  symbol_fax.h  symbol_fax_direct.c  symbol_fax_iluk.c  symbol_io.c  symbol_reorder.c  symbol_reorder.h  symbol_reordering.c
test/: CMakeLists.txt  bcsc_norm_tests.c  bcsc_spmv_tests.c  bcsc_spmv_time.c  bvec_gemv_tests.c  bvec_tests.c  tests.h  tests_auxiliary.c  validate_convert.sh  validate_expand.sh  z_bcsc_tests.c  z_bvec_tests.c  z_ge2lr_performance.c  z_ge2lr_stability.c  z_ge2lr_tests.c  z_lowrank_tests.c  z_lrmm_tests.c  z_rradd_tests.c  z_tests.h
tools/: analysis.sh  binding_for_multimpi.c  check_header.sh  clean_blend_trace.sh  clean_counters.py  filelist.sh  gen_wrappers.py  release.sh  update_release.sh
wrappers/: CMakeLists.txt
wrappers/fortran90/: CMakeLists.txt
wrappers/fortran90/examples/: flaplacian.f90  fmultidof.f90  fmultilap.f90  fsimple.f90  fstep-by-step.f90
wrappers/fortran90/src/: pastix_enums.F90  pastixf.f90
wrappers/python/: CMakeLists.txt
wrappers/python/examples/: schur.py  schur_obj.py  simple.py  simple_obj.py  step-by-step.py
wrappers/python/examples/pypastix/: __init__.py  __pastix__.py  enum.py.in  pastix.py  solver.py
(+64 files in other folders)
